# shaderfiddle

./: CMakeLists.txt
shaders/: blob.glsl  card.glsl
src/: fx.cpp  fx.hpp  gfx.cpp  gfx.hpp  gui.cpp  gui.hpp  main.cpp
